[package]
name = "moko256_wol_from_discord"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
once_cell = "1.8.0"
async-trait = "0.1"
log = { version = "0.4", features = ["max_level_off"]}

[dependencies.tokio]
version = "1"
default-features = false
features = [
    "macros",
    "rt",
    "net",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["gzip"]

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = [
    "native_tls_backend",
    "client",
    "http",
    "gateway",
    "model",
    "unstable_discord_api",
]